fixed ordered list alignment

--- a/styles.css
+++ b/styles.css
@@ -23,3 +23,7 @@ button {
   border-radius: 10px;
   border: none;
 }
+
+li {
+  text-align: left;
+}
